--- a/python/stats/Makefile
+++ b/python/stats/Makefile
@@ -1,5 +1,5 @@
-PIDFILE= .gateway.pid
-LOGFILE= .gateway.log
+PIDFILE= stats.pid
+LOGFILE= stats.log
 
 generate_proto:  
 	python3 -m grpc_tools.protoc -I../../protobuf/stats ../../protobuf/stats/stats.proto --python_out=stats/ --grpc_python_out=stats/
