Поправить возню с протобуфом

--- a/python/gateway/Makefile
+++ b/python/gateway/Makefile
@@ -1,31 +1,10 @@
 PIDFILE= $(PIDDIR)/gateway.pid
 LOGFILE= $(LOGDIR)/gateway.log
 
-prepare_generation:
-	mkdir ./buf/
-	mkdir ./buf/gateway/
-	cp -r ../../protobuf/* ./buf/gateway/
-
-clean_buffer:
-	rm -rf ./buf
-
-
-data_client:
-	python3 -m grpc_tools.protoc -I./buf/ ./buf/gateway/data/data.proto --python_out=. --grpc_python_out=.
-
-stats_client:
-	python3 -m grpc_tools.protoc -I./buf/ ./buf/gateway/stats/stats.proto --python_out=. --grpc_python_out=.
-
-generate_clients: \
-	prepare_generation \
-	data_client \
-	stats_client \
-	clean_buffer
-
 start:
 	( \
-		. gateway/venv/bin/activate; \
-		FLASK_APP=gateway/app.py nohup python3 -m flask run  > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
+		. venv/bin/activate; \
+		PYTHONPATH=$(PYTHONPATH) FLASK_APP=gateway/app.py nohup python3 -m flask run  > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
 	)
 
 stop:
