поправить конфигурацию и make

--- a/python/data/Makefile
+++ b/python/data/Makefile
@@ -2,8 +2,10 @@ PIDFILE= $(PIDDIR)/data.pid
 LOGFILE= $(LOGDIR)/data.log
 
 start:
-	echo $(LOGDIR)
-	nohup python3 data/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE)
+	( \
+		. venv/bin/activate; \
+		nohup python3 data/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
+	)
 
 stop:
 	cat $(PIDFILE) | xargs kill
