--- a/python/stats/Makefile
+++ b/python/stats/Makefile
@@ -2,7 +2,10 @@ PIDFILE= $(PIDDIR)/stats.pid
 LOGFILE= $(LOGDIR)/stats.log
 
 start:
-	nohup python3 stats/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE)
+	( \
+		. venv/bin/activate; \
+		nohup python3 stats/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
+	)
 
 stop:
 	cat $(PIDFILE) | xargs kill
