--- a/python/receiver/Makefile
+++ b/python/receiver/Makefile
@@ -1,19 +1,20 @@
 EXTRADEP := $(if $(EXTRADEP),$(EXTRADEP),$(realpath ./depends))
-PIDFILE := $(if $(PIDFILE),$(PIDFILE),"$(PIDDIR)/data.pid")
-LOGFILE := $(if $(LOGFILE),$(LOGFILE),"$(LOGDIR)/data.log")
+PIDFILE := $(if $(PIDFILE),$(PIDFILE),"$(PIDDIR)/reciever.pid")
+LOGFILE := $(if $(LOGFILE),$(LOGFILE),"$(LOGDIR)/reciever.log")
 
 PYTHONPATH=PYTHONPATH:$(EXTRADEP)
-CONTAINERNAME=data
-IMAGENAME=data
+CONTAINERNAME=reciever
+IMAGENAME=reciever
+CONFIG=config.yml.example
 
 start:
 	( \
 		. venv/bin/activate; \
-		nohup python3 data/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
+		nohup python3 reciever/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
 	)
 
 start_4_docker:
-	PYTHONPATH=$(PYTHONPATH) python3 data/app.py
+	PYTHONPATH=$(PYTHONPATH) python3 reciever/app.py
 
 stop:
 	cat $(PIDFILE) | xargs kill
@@ -28,7 +29,7 @@ docker_container_remove:
 	-docker container rm $(CONTAINERNAME)
 
 docker_run_container:
-	docker run -p 5000:5000  -d --name $(CONTAINERNAME) $(IMAGENAME)
+	docker run -p 5000:5000 -d --name $(CONTAINERNAME) $(IMAGENAME)
 
 docker_build:
 	docker build -t $(IMAGENAME) .
