--- a/python/data/requirements.txt
+++ b/python/data/requirements.txt
@@ -3,3 +3,11 @@ pika==0.11.2
 protobuf==3.5.2
 pymongo==3.6.1
 six==1.11.0
+click==6.7
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+marshmallow==2.15.0
+pika==0.11.2
+PyYAML==3.12
+Werkzeug==0.14.1
