Добавить развёртывание в одну команду

--- a/python/data/kuber/data-deployment.yaml
+++ b/python/data/kuber/data-deployment.yaml
@@ -16,6 +16,6 @@ spec:
       containers:
       - name: data
         imagePullPolicy: Never
-        image: data:latest
+        image: data
         ports:
         - containerPort: 5000
