--- a/python/gateway/Makefile
+++ b/python/gateway/Makefile
@@ -48,3 +48,40 @@ stop:
 
 build:
 	cp -r ../../depends/python depends
+
+kubernetes_service:
+	kubectl apply -f kuber/reciever-service.yaml
+
+kubernetes_deployment:
+	kubectl apply -f kuber/reciever-deployment.yaml
+	
+kubernetes_deployment_remove:
+	kubectl delete deployment -l app=gateway
+
+kubernetes_service_remove:
+	kubectl delete service -l name=gateway
+
+docker_build: \
+	version_file_increment \
+	docker_build_curr
+
+docker_build_curr:
+	o=`cut -f1 VERSION`; \
+	docker build -t $(IMAGENAME):$$o . ;
+
+kubernetes_service_remove:
+	kubectl delete service -l name=gateway
+
+version_file_increment:
+	o=`cut -f1 VERSION`; \
+	n=`expr $$o + 1`; \
+	echo $$n > VERSION; \
+
+kubernetes_buildnload: \
+	docker_build \
+	kubernetes_update_image
+
+kubernetes_update_image:
+	o=`cut -f1 VERSION`; \
+	echo "image version is ", $$o; \
+	kubectl set image deployment/gateway-deployment $(IMAGENAME)=$(IMAGENAME):$$o
