--- a/python/stats/kuber/user-service.yaml
+++ b/python/stats/kuber/user-service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: user
-  name: user-service
+    name: stats
+  name: stats-service
 spec:
   ports:
   - port: 5000
   selector:
-    app: user
+    app: stats
