--- a/python/gateway/requirements.txt
+++ b/python/gateway/requirements.txt
@@ -5,6 +5,7 @@ Flask-RESTful==0.3.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+marshmallow==2.15.0
 pytz==2018.3
 six==1.11.0
 Werkzeug==0.14.1
