Сделать ещё более страшные makefile и добавить сервисов #27

--- a/python/auth/Makefile
+++ b/python/auth/Makefile
@@ -10,7 +10,7 @@ CONFIG=config.yml.example
 start:
 	( \
 		. venv/bin/activate; \
-		nohup python3 auth/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
+		PYTHONPATH=$(PYTHONPATH):. nohup python3 auth/app.py > $(LOGFILE) 2>&1 & echo $$!> $(PIDFILE); \
 	)
 
 start_4_docker:
