--- a/python/gateway/Dockerfile
+++ b/python/gateway/Dockerfile
@@ -3,6 +3,7 @@ COPY depends depends
 COPY gateway gateway
 COPY Makefile Makefile
 COPY requirements.txt requirements.txt
+COPY etc etc
 COPY run_test.py run_test.py
 RUN apt-get update && apt-get install make
 RUN pip install --no-cache-dir -r requirements.txt
