--- a/python/object/Dockerfile
+++ b/python/object/Dockerfile
@@ -3,6 +3,7 @@ COPY depends depends
 COPY object object
 COPY requirements.txt requirements.txt
 COPY Makefile Makefile
+COPY etc etc
 RUN apt-get update && apt-get install make
 RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
