--- a/python/receiver/config_s.yml
+++ b/python/receiver/config_s.yml
@@ -1,9 +1,9 @@
 flask:
   debug: 1
   host: 0.0.0.0
-  port: 5000
+  port: 5004
 
 rabbit_mq:
-    host: rabbitmq
+    host: 127.0.0.1
     port: 5672
     
