Добавить поддержку https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/letsencrypt/live/meter4.me/fullchain.pem:/etc/ssl/fullchain.pem
+      - /etc/letsencrypt/live/meter4.me/privkey.pem:/etc/ssl/privkey.pem
   # TODO: поправить тарифы
   # tariffs:
   #   restart: unless-stopped
