--- a/python/receiver/Dockerfile
+++ b/python/receiver/Dockerfile
@@ -1,21 +1,11 @@
-FROM python:3
-MAINTAINER Eduard Asriyan <ed-asriyan@protonmail.com>
-
-WORKDIR /application
-
-ADD requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
-
-ADD app ./app
-ADD app.py app.py
-ADD configuration ./configuration
-ADD Makefile Makefile
-
-ARG CONFIG=config.yml
-ADD config.yml config.yml
+FROM grpc/python:1.4-onbuild
+COPY depends depends
+COPY receiver receiver
+COPY requirements.txt requirements.txt
+COPY Makefile Makefile
 COPY etc etc
-
+RUN apt-get update && apt-get install make
+RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
-
 ENTRYPOINT [ "make" ]
 CMD [ "start_4_docker" ]
