--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,2 +1,12 @@
 version: '3'
 
+# services:
+#   gateway:
+#     ports:
+#       - "5000:5000"
+#   auth:
+#     ports:
+#       - "4999:5000"
+#   receiver:
+#     ports:
+#       - "5001:5000"
